<resources>
    <string name="app_name">NewsPaper</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_remove_random">Remove Random</string>
    <string name="action_remove_all">Remove All</string>
    <string name="action_remove">Remove</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_your_url_here">Add your url here!</string>
    <string name="random_link">Random link</string>
    <string name="number_of_links">Number of links</string>
    <string name="sort">Sort</string>
</resources>