<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.duyts.newspaper.ui.main.MainActivity">

    <item
        android:id="@+id/action_remove_random"
        android:orderInCategory="100"
        android:title="@string/action_remove_random"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_remove_all"
        android:orderInCategory="100"
        android:title="@string/action_remove_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_remove"
        android:orderInCategory="100"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/action_remove"
        app:showAsAction="ifRoom" />
</menu>